<resources>
    <string name="app_name">SpaceflightNews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="articles">Articles</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="website">WEBSITE</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="share">Share</string>
    <string name="filter">Filter</string>
    <string name="favorites_key">FAVORITES_KEY</string>
    <string name="history_key">HISTORY_KEY</string>
    <string name="main_key">MAIN_KEY</string>
</resources>